--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,27 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Environment variables
+.env
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Compiled output
+dist/
+build/
+
+# IDE settings
+.vscode/
+.idea/
